tests/outref/TERR025.ref

-- TERR025 : OCTO483 : Issue error when invalid integer values are used in CREATE TABLE DELIM list

-- No negative integers
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (-1) GLOBAL "^delimnames(keys(""id""))";

-- No values greater than UTF-8 max code point value (i.e. MAX_UTF8_VALUE = 1112064)
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (1112065) GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (111206500) GLOBAL "^delimnames(keys(""id""))";

Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (-1) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^
syntax error, unexpected MINUS, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (-1) GLOBAL "^delimnames(keys(""id""))";
[ERROR] PATH:LINENUM DATE TIME : Integer value 1112065 given for delimiter character is not a valid ASCII (0-127) character
Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (1112065) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (1112065) GLOBAL "^delimnames(keys(""id""))";
[ERROR] PATH:LINENUM DATE TIME : Integer value 111206500 given for delimiter character is not a valid ASCII (0-127) character
Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (111206500) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (111206500) GLOBAL "^delimnames(keys(""id""))";
